--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>hola mundo!!!</p>
-    <p>estoy codeando desde WSL</p>
+    <p>estoy codeando desde WSL, ya pude conectar mi VS code a gitHub desde la terminal</p>
 </body>
 </html>
