--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>UBUNTU</title>
 </head>
 <body>
-    <p>hola mundo!!!</p>
+    <p>hola!!! mundo!!!</p>
     <p>estoy codeando desde WSL, ya pude conectar mi VS code a gitHub desde la terminal</p>
 </body>
 </html>
